--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-NFV-Inspector will be live again before Jan. 2019
+<!doctype>
+<html>
+  <body>
+    NFV-Inspector will go live again before Jan. 2019
+  </body>
+</html>
