--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype>
 <html>
   <body>
-    NFV-Inspector will go live again before Jan. 2019
+    NFV-Inspector will go live again on November 2019! <a href="https://gokan.me">Stay tuned</a>...
   </body>
 </html>
