--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="wrapper flexbox verticalAlign animsition" id="content">
         <div class="page flexFullChild text-center">
             <div class="pageContent text-center">
-                <div class="logo"><img src="images/logo-with-text-white.png" alt="NFV-Inspector logo" /></div>
+                <div class="logo"><h1><img src="images/logo-with-text-white.png" alt="NFV-Inspector: a machine learning ready NFV system analysis platform" /></h1></div>
                 <h2>Automated NFV Systems analysis &amp; benchmarking platform</h2>
                 <h5><span>First beta release is coming in November</span></h5>
                 <div id="countdown"></div>
@@ -129,7 +129,7 @@
     <!-- Custom -->
     <script src="js/custom.js"></script>
     <!-- Particles -->
-	<script src="js/custom_particles.js"></script>
+    <script src="js/custom_particles.js"></script>
     <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </body>
 
