Open Source clause added

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <h2>Automated NFV Systems analysis &amp; benchmarking platform</h2>
                 <h5><span>First beta release is coming in November</span></h5>
                 <div id="countdown"></div>
+                <h6>100% Free and Open Source under the <a href="LICENSE.txt">MIT License</6>
                 <div class="buttons">
                     <a href="mailto:michel.gokan@kau.se?subject=NFV-Inspector%20Alpha%20Release%20Access&body=Hi! Please add me to the NFV-Inspector GitHub repository. I want to try out the alpha release. Thanks :-)" class="subscribeButton button"><i class="fa fa-envelope"></i> Request for Alpha Release Access</a>
                     <a href="#" class="infoButton button yellow contentView"><i class="fa fa-navicon"></i>information</a>
