--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property='og:image' content='images/logo-with-text.png"/>
+    <meta property='og:image' content='images/logo-with-text.png'/>
     <title>Avocado - Multiporpose Coming Soon Template</title>
     <!-- Standard -->
-    <link rel="shortcut icon" href="images/favicons/fi144.png">
+    <link rel="shortcut icon" href="images/logo.png">
     <!-- Retina iPad Touch Icon-->
     <link rel="apple-touch-icon" sizes="144x144" href="http://via.placeholder.com/144x144">
     <!-- Retina iPhone Touch Icon-->
