--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property='og:image' content='images/logo-with-text.png'/>
-    <title>Avocado - Multiporpose Coming Soon Template</title>
+    <title>NFV-Inspector</title>
     <!-- Standard -->
     <link rel="shortcut icon" href="images/logo.png">
     <!-- Retina iPad Touch Icon-->
