--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property='og:image' content='images/logo-with-text.png'/>
-    <title>NFV-Inspector: a machine learning ready NFV system analysis and monitoring platform</title>
+    <meta property="og:title" content="NFV-Inspector: a machine learning ready NFV systems automated analysis and monitoring platform" />
+    <meta property="og:description" content="NFV-Inspector automatically runs test scenarios an NFV deployment using benchmarking tools, monitor resource utilization and correlate them with VNFs response time and then pass these information to its Machine Learning plugins." />
+    <meta property="og:url" content="https://source.nfvinspector.com/" />
+    <meta property="og:site_name" content="NFV-Inspector" />
+
+    <title>NFV-Inspector: a machine learning ready NFV systems automated analysis and monitoring platform</title>
     <!-- Standard -->
     <link rel="shortcut icon" href="images/logo.png">
-    <!-- Retina iPad Touch Icon-->
-    <link rel="apple-touch-icon" sizes="144x144" href="http://via.placeholder.com/144x144">
-    <!-- Retina iPhone Touch Icon-->
-    <link rel="apple-touch-icon" sizes="114x114" href="http://via.placeholder.com/114x114">
-    <!-- Standard iPad Touch Icon-->
-    <link rel="apple-touch-icon" sizes="72x72" href="http://via.placeholder.com/72x72">
-    <!-- Standard iPhone Touch Icon-->
-    <link rel="apple-touch-icon" sizes="57x57" href="http://via.placeholder.com/57x57">
     <!-- Avocado Stylesheet -->
     <link href="css/avocado.css" rel="stylesheet">
     <!-- Cusom Stylesheet -->
