--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <meta property="og:description" content="NFV-Inspector automatically runs test scenarios an NFV deployment using benchmarking tools, monitor resource utilization and correlate them with VNFs response time and then pass these information to its Machine Learning plugins." />
     <meta property="og:url" content="https://source.nfvinspector.com/" />
     <meta property="og:site_name" content="NFV-Inspector" />
+    <meta name="google-site-verification" content="rK3Z7koVToqjJcTdy2GK-LFtOZpAUseENer_eGQFsHI" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127759866-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-127759866-1');
+    </script>
+
 
     <title>NFV-Inspector: a machine learning ready NFV systems automated analysis and monitoring platform</title>
     <!-- Standard -->
