--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="pageContent text-center">
                 <div class="logo"><h1><img src="images/logo-with-text-white.png" alt="NFV-Inspector: a machine learning ready NFV system analysis platform" /></h1></div>
                 <h2>Automated NFV Systems analysis &amp; benchmarking platform</h2>
-                <h5><span>First beta release is coming in November</span></h5>
+                <h5><span>First beta release is coming in 25 of November</span></h5>
                 <div id="countdown"></div>
                 <h6>100% Free and Open Source under the <a href="LICENSE">MIT License</6>
                 <div class="buttons">
